[gd_scene load_steps=4 format=3 uid="uid://g4yq1v466fm0"]

[ext_resource type="Theme" uid="uid://brcmi4hjnlr62" path="res://Things/UI/Theme.tres" id="1_lbu2v"]
[ext_resource type="Script" uid="uid://b2r75ua320r7" path="res://Things/UI/Dialogue/DialogueDisplay/dialogue_display.gd" id="2_1sl4s"]
[ext_resource type="PackedScene" uid="uid://basupxfrrm1ru" path="res://Things/UI/Dialogue/DialogueDisplay/DialogueButton.tscn" id="3_6qm0u"]

[node name="DialogueDisplay" type="Panel"]
custom_minimum_size = Vector2(500, 600)
theme = ExtResource("1_lbu2v")
script = ExtResource("2_1sl4s")
button_scene = ExtResource("3_6qm0u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextBox" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
text = "test"

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
